# EmbeddedProject-robodog

./: .gitignore  README.md
PICO/: DEBUG_UART_CONNECTION.md  UART_FIX_QUICKREF.md
PICO/SpotMicro_PicoRP2040W_FreeRTOS/: .gitignore  CMakeLists.txt  CMakePresets.json  DIAGNOSTICS.md  FLASHING_GUIDE.md  FreeRTOSConfig.h  README.md  SERIAL_DEBUG_GUIDE.md  main_controller.cpp  sensor_hub.cpp  sensor_hub.h  wifi_config.h
PICO/SpotMicro_PicoRP2040W_FreeRTOS/docs/: WIRING_DIAGRAM.md
PICO/SpotMicro_PicoRP2040W_FreeRTOS/drivers/: h_bridge_l298n.cpp  lcd_16x2.cpp  lcd_16x2.h  pca9685.cpp  pca9685.h
PICO/SpotMicro_PicoRP2040W_FreeRTOS/middleware/kinematics/: spot_kinematics.h  spot_kinematics_v2.h
PICO/cameras/esp32_stereo_camera/: main.cpp  stereo_config.h
PICO/es-ekf/: es_ekf.py
PICO/nano_rp2040_imu_driver/: WIRING.md  platformio.ini
PICO/nano_rp2040_imu_driver/src/: LSM6DSOX_Driver.cpp  LSM6DSOX_Driver.h  PCA9685_Driver.cpp  PCA9685_Driver.h  main.cpp
PICO/spotmicro-rp2040/: CMakeLists.txt  h_bridge_l298n.h  hc_sr04.cpp  hc_sr04.h  lcd_16x2.cpp  lwipopts.h  main_controller.cpp  pca9685.cpp  spotmicro-rp2040.cpp  stereo_vision.cpp  stereo_vision.h  test_12_servos.cpp  test_hc_sr04.cpp  test_hc_sr04_debug.cpp  test_height_control.cpp  test_i2c_pca9685.cpp  test_kinematics_gait.cpp  test_lcd.cpp  test_servo.cpp  test_servo_2.cpp  test_servo_debug.cpp  wifi_config.h
PICO/spotmicro-rp2040/docs/: STEREO_VISION_WIRING.md  UART_TROUBLESHOOTING.md
PICO/web_interface/backend/: ekf_module.py  requirements.txt  rotations.py  server.py  stereo_utils.py  test_server.py
PICO/web_interface/frontend/: index.html
PICO/web_interface/voice_ctrl/: mic_test.py  requirements.txt  voice_client.py
Project docs/: SpotMicro AI Dog in Egypt (1).pptx  SpotMicro Minimalist Project  (1).docx
(+6 files in other folders)
